--- a/templates/item/attribute-parts/combat-power.hbs
+++ b/templates/item/attribute-parts/combat-power.hbs
@@ -10,7 +10,7 @@
           {{/each}}
         </select>
       </div>
-      <div class="resource checkbox-resource">
+      <div class="checkbox-attribute">
         <label class="resource-label" for="system.targeted">{{localize 'EVENTIDE_RP_SYSTEM.Item.Roll.Targeted.label'}}</label>
         <div class="toggle-switch-wrapper">
           <input type="checkbox" class="base-form__toggle-switch-left" name="system.targeted" id="system.targeted" {{checked system.targeted}} />
