--- a/src/scss/components/_popup-forms.scss
+++ b/src/scss/components/_popup-forms.scss
@@ -70,7 +70,7 @@
   // Elements
   &__header {
     @extend .protest-revolution-regular;
-    color: colors.$card-white;
+    color: colors.$c-black;
     text-align: center;
     padding: 0.875rem;
     font-size: 1.125rem;
@@ -93,8 +93,6 @@
     text-align: center;
     overflow-y: auto; 
     max-height: calc(90rem - 100px); 
-
-    @include form-elements.scrollbar-base;
   }
 
   &__subheader {
@@ -150,8 +148,7 @@
     max-width: 100%;
     max-height: 150px;
     object-fit: contain;
-    border-radius: 4px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border: 0px;
   }
 
   &__effects {
@@ -178,7 +175,7 @@
   }
 
   &__button {
-    @include mixins.button-base;
+    @include mixins.grid-compliant-button;
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     margin-bottom: 0.5rem;
