--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -12,7 +12,7 @@
 @use 'global/flex';
 @use 'global/character-sheet';
 @use 'global/form-elements';
-@use 'global/checkbox-overrides';
+@use 'global/global-overrides';
 
 /* Styles limited to eventide-rp-system sheets */
 @use 'components/chat-cards';
