--- a/src/scss/global/_character-sheet.scss
+++ b/src/scss/global/_character-sheet.scss
@@ -1,108 +1,90 @@
-@use "../utils/colors"as colors;
-@use "../utils/typography"as typography;
+@use "../utils/colors" as colors;
+@use "../utils/typography" as typography;
+@use "../utils/mixins" as mixins;
 
 .eventide-ability-row {
-  border: 1px solid colors.$character-white;
-  border-radius: 5px;
-  padding: 5px;
-  color: colors.$character-white;
+  border-radius: 0.5rem;
+  padding: 0.25rem;
+  color: colors.$universal-white;
+  text-align: center;
+  
+  // Apply hover effect only to direct children that are not inputs or ability-override
+  > *:not(input):not(.ability-override):hover {
+    text-shadow: 0 0 0.125rem colors.$white-text-glow, 0 0 0.25rem colors.$white-text-glow, 0 0 0.375rem colors.$white-text-glow;
+    color: colors.$universal-white;
+  }
+  
+  // Ensure ability-override never gets the hover effect
+  .ability-override {
+    color: colors.$universal-white;
+    text-shadow: none !important;
+    
+    &:hover {
+      text-shadow: none !important;
+    }
+    
+    // Also target any children of ability-override
+    * {
+      text-shadow: none !important;
+      
+      &:hover {
+        text-shadow: none !important;
+      }
+    }
+  }
 }
 
 .features {
   overflow-y: auto;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 .eventide-character-sheet {
-  // background-image: colors.$character-background-color;
-  // padding: 5px;
-  // margin: -8px;
-  // background-attachment: local;
-  
   &--scrollbars {
     // Apply scrollbars to the entire tab content
     .tab {
-      height: 600px; // Fixed height to ensure scrolling happens
+      height: 39.06rem; // Fixed height to ensure scrolling happens
       overflow-y: auto !important;
-      -ms-overflow-style: initial !important;
-      scrollbar-width: thin !important;
-      scrollbar-color: var(--eventide-rp-system-input-focus) transparent !important;
-      
-      &::-webkit-scrollbar {
-        width: 6px !important;
-        background-color: transparent !important;
-        display: block !important;
-      }
-      
-      &::-webkit-scrollbar-thumb {
-        background-color: var(--eventide-rp-system-input-focus) !important;
-        border-radius: 10px !important;
-        border: 1px solid var(--eventide-rp-system-input-bg) !important;
-        
-        &:hover {
-          background-color: var(--eventide-rp-system-primary-button-hover) !important;
-        }
-      }
-      
-      &::-webkit-scrollbar-track {
-        background-color: transparent !important;
-        margin: 0 !important;
-      }
       
       // Ensure all sections don't scroll individually
       section.main, aside.sidebar, .items-list {
         overflow: visible !important;
-        // max-height: none !important; // Remove height constraints
-      }
-    }
-    
-    // Override features class to show scrollbars when needed
-    .tab.features {
-      &::-webkit-scrollbar {
-        display: block !important;
       }
     }
   }
 }
 
 .eventide-character-sheet input {
-  background-color: colors.$character-input;
-  color: colors.$c-black;
-  border-radius: 5px;
-  border: 1px solid colors.$character-input-border;
+  @include mixins.grid-compliant-text-input;
+  border: 0.125rem inset colors.$universal-white;
+  text-align: center;
 }
 
 .eventide-character-sheet input::selection {
-  background: colors.$character-black;
-  color: colors.$character-white;
-}
-
-.eventide-ability-row :hover:not(input) {
-  text-shadow: 1px 1px 1px 1px colors.$character-black, 5px 5px 5px 5px colors.$character-glow, 10px 10px 10px 10px colors.$character-glow;
-  color: colors.$character-white;
+  background: colors.$universal-white;
+  color: colors.$universal-black;
 }
 
 .eventide-ability-acro-box {
-  background-color: colors.$acro;
+  background-color: colors.$acro-transparent;
+  border-left: 0.3125rem solid colors.$acro;
 }
 
 .eventide-ability-phys-box {
-  background-color: colors.$phys;
+  background-color: colors.$phys-transparent;
+  border-left: 0.3125rem solid colors.$phys;
 }
 
 .eventide-ability-fort-box {
-  background-color: colors.$fort;
+  background-color: colors.$fort-transparent;
+  border-left: 0.3125rem solid colors.$fort;
 }
 
 .eventide-ability-will-box {
-  background-color: colors.$will;
+  background-color: colors.$will-transparent;
+  border-left: 0.3125rem solid colors.$will;
 }
 
 .eventide-ability-wits-box {
-  background-color: colors.$wits;
+  background-color: colors.$wits-transparent;
+  border-left: 0.3125rem solid colors.$wits;
 }
