--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -43,6 +43,11 @@
   &:hover {
     background-color: colors.$input-hover;
   }
+
+  &::selection {
+    background-color: colors.$input-text;
+    color: colors.$input-bg;
+  }
   
   &:focus {
     outline: none;
@@ -127,16 +132,31 @@
   &::-ms-expand {
     display: none;
   }
+}
+
+@mixin grid-compliant-toggle-group {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin: 1rem 0; 
+  padding: 0.25rem 0.5rem 0.75rem 0.5rem; 
   
-  // For Chrome/Safari
-  &::-webkit-scrollbar {
-    width: 8px;
-    background-color: #2a3441;
+  label:first-child {
+    @include form-label-base;
+    min-width: 7.5rem; 
+    flex: 0 0 auto;
+    flex-grow: 1; 
+    margin-right: 0.625rem; 
+    cursor: pointer; 
+    margin-bottom: 0; 
   }
   
-  &::-webkit-scrollbar-thumb {
-    background-color: #4d94ff;
-    border-radius: 4px;
+  .toggle-switch-wrapper {
+    width: 2.5rem; 
+    flex: 0 0 2.5rem; 
+    position: relative;
+    margin-left: auto; 
+    overflow: visible; 
   }
 }
 
@@ -311,6 +331,8 @@
   color: colors.$label-text;
   margin-bottom: 0.375rem;
   display: block;
+  flex: 0, 0, 120px;
+  min-width: 120px;
 }
 
 @mixin form-label-small {
@@ -346,7 +368,7 @@
   color: colors.$button-text;
   border: 0.0625rem solid colors.$button-border;
   border-radius: 0.25rem;
-  padding: 0.5rem 1rem;
+  // padding: 0.5rem 1rem;
   cursor: pointer;
   font-family: 'Underdog', serif;
   font-size: 1rem;
@@ -379,7 +401,6 @@
 }
 
 @mixin grid-compliant-button {
-  // Start with the base button styling
   @include button-base;
   
   // Grid-specific properties (only changing display and width)
@@ -388,7 +409,7 @@
   box-sizing: border-box;
   font-weight: 500;
   margin: 0;
-  min-height: 2.5rem; // Slightly taller than base buttons
+  min-height: 2.5rem;
 }
 
 @mixin grid-compliant-color-picker {
