--- a/templates/chat/initiative-roll.hbs
+++ b/templates/chat/initiative-roll.hbs
@@ -1,5 +1,5 @@
 <div class="chat-card">
-  <div class="chat-card__header chat-card__header--initiative">
+  <div class="chat-card__header chat-card__header--initiative {{#if npc}}chat-card__header--initiative-npc{{else}}chat-card__header--initiative-pc{{/if}}">
     <i class="fa-solid fa-bolt"></i> {{name}} rolls for Initiative
   </div>
   <div class="chat-card__initiative">
